# PostgresSCRAM256PasswordGenerator

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  configure.ac  control  pg-password-generator.c
rpmbuild/SPECS/: pg-password-generator.spec
src/: Makefile.am  main.c
